--- a/.env
+++ b/.env
@@ -13,4 +13,9 @@ SVC_USERNAME=schule
 SVC_PASSWORD=leerling
 GO_ENV=development
 
+CLOUDINARY_NAME=gits-msib
+CLOUDINARY_URL=cloudinary://691761617997714:iItmZtQYTFOpzA2pB5k45WR18Rg@gits-msib
+CLOUDINARY_API_KEY=691761617997714
+CLOUDINARY_API_SECRET=iItmZtQYTFOpzA2pB5k45WR18Rg
+
 DEVOPS=TEST
